--- a/vinhos/README.org
+++ b/vinhos/README.org
@@ -170,7 +170,7 @@ No jogo com 2 jogadores apenas os slots da área demarcada interna são válidos
 
 - Retirar seus bagos do banco: Mova seu marcador para trás o número de espaços relativo ao valor do saque e pegue este montante em bagos.
 
-Caso atinja o valor de -2VP imediatamente perca esses pontos. Não será mais possível realizar saques até que o saldo seja novamente positivo.
+Caso atinja o valor de -2PV imediatamente perca esses pontos. Não será mais possível realizar saques até que o saldo seja novamente positivo.
 
 - Depositar seus bagos no banco: Mova seu marcador para a frente o número de espaços relativo ao montante que deseja depositar e entregue seus bagos ao banco.
 
@@ -205,3 +205,100 @@ Isto pode ser necessário para atingir a expectativa do magnata Bruno ou apenas 
 - Ganhe os pontos de feira caso seu vinho seja de valor superior a 9, ganhe pontos pelo excedente.
 - Pegue seu tile de feira de acordo com a tabela em seu tabuleiro pessoal de jogador.
 - Escolha um quiosque de feira vazio e coloque seu tile nele. Pegue o bônus ofertado nele e ganhe pontos de feira de acordo com as características do vinho marcadas no quiosque. Ex: Aroma (verde), aparência (azul).
+
+#+BEGIN_QUOTE
+Características do vinho são trilhas na área de feira que representam os atributos de aroma, aparência, percentual de álcool e sabor e são incrementadas de acordo com o que consta no tile de previsão do tempo e com o
+uso de especialistas durante a feira.
+#+END_QUOTE
+
+- Coloque barris opcionalmente nos magnatas que consiga cumprir as exigências de apreciação do vinho. No máximo 2 dos três magnatas pode ser atendido.
+
+Anabela: seu interesse é o tipo do vinho (branco ou tinto).
+Bruno: seu interesse é o valor do vinho.
+Carolina: seu interesse é pela região de onde o vinho é proveniente.
+
+Tendo barris em um magnata lhe permite fazer ações bônus desse magnata ao custo de um vinho qualquer.
+
+** Manutenção
+
+- Receba ou pague juros de acordo com seu investimento no banco (movimentação da conta).
+
+Se não puder pagar, pague o que for possível com seu crédito no banco até atingir os -2PV, perca esses pontos, descarte uma vinícola, se não tiver como, descarte um vinhedo.
+Enólogos e fazendeiros movem-se opcionalmente para outras vinículas ou vinhedos em outras de suas fazendas ou caso não tenham alojamento, são descartados para o estoque geral.
+
+- Pague o salário dos Enólogos. Demita todos os que não possa ou não queira pagar.
+
+#+BEGIN_QUOTE
+Todos estas movimentações são feitas no banco. Bagos não são utilizados nesses casos.
+#+END_QUOTE
+
+** Produção
+
+- Envelheça o vinho.
+- Opcionalmente redistribua os empregados (Enólogos para vinícolas e fazendeiros para vinhedos).
+- Produza vinho.
+
+Se a qualidade, levando em consideração os modificadores como às condições climáticas for maior que 0 (zero) pegue um tile do estoque e armazene em seu depósito ou adega.
+
+** Feira do vinho
+
+Nos anos 3, 5 e 6 temos a feira do vinho.
+
+Os jogadores que não colocaram seu tile em um quiosque na feira devem fazê-lo agora em ordem de turno, respeitando as mesmas regras da coletiva de imprensa, porém a ordem de jogo não se altera e nem é possível
+adicionar barris aos magnatas.
+
+Então ocorre a feira:
+
+- Pegue todos os seus tiles de especialista e secretamente escolha o número de especialistas permitidos pelo sei tile de feira.
+
+Só é possível usar especialistas das características presentes em seu quiosque.
+
+- Simultaneamente os jogadores revelam os especialistas selecionados.
+
+Os especialistas que apresentarem uma seta no canto inferior esquerdo de seu tile, movem a respectiva característica do vinho para cima.
+
+- Receba pontos de feira de acordo com o nível das características associadas aos seus especialistas apresentados.
+
+- Determine o ranking de acordo com o número acumulado de pontos de feira e atribua a pontuação de vitória.
+
+Para 2 jogadores:
+
+1a feira:
+
+- 1o 9PV
+- 2o 3PV
+
+2a feira
+
+- 1o 12PV
+- 2o 4PV
+
+3a feira
+
+- 1o 15PV
+- 2o 5PV
+
+Em caso de empate os pontos são divididos.
+
+Final de feira:
+
+- Descarte os especialistas usados.
+- Recupere seu tile de feira.
+- Ajuste a ordem de turno, o último colocado da feira é agora o primeiro.
+
+** Final do jogo e pontuação
+
+Depois da terceira feira do vinho começando com o jogador inicial (último colocado na feira), cada jogador usa o benefício de um magnata, descartando 1 vinho e movendo seu barril.
+Continue até que todos os jogadores terminem suas possibilidades.
+
+É permitido usar as habilidades bônus de seus especialistas restantes.
+
+Finalmente receba pontos por:
+
+- Seu balanço no banco.
+- Maioria nas colunas de exportação (empate os pontos são divididos).
+- Multiplicadores de final de jogo na área dos magnatas.
+
+O jogador com mais PV é o vitorioso.
+
+Saúde!!
