--- a/vinhos/README.org
+++ b/vinhos/README.org
@@ -53,7 +53,7 @@ Caso seja o primeiro vinhedo na sua fazenda, coloque seu disco na região do map
 
 - Pegue o bônus da região caso se aplique.
 
-*** 2) Vinícolas: Construa 1 ou 2 vinícolas*
+*** 2) Vinícolas: Construa 1 ou 2 vinícolas
 
 Para cada vinícola construída o jogador deve:
 
