[ADD] Vinhos update and Twilight Struggle

--- a/vinhos/README.tex
+++ b/vinhos/README.tex
@@ -1,4 +1,4 @@
-% Created 2020-05-31 Sun 00:39
+% Created 2020-05-31 Sun 00:57
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,7 +29,7 @@
 \tableofcontents
 
 \section{Vinhos: 2010 Reserve (Resumo das regras com foco em 2 jogadores)}
-\label{sec:orgf1af133}
+\label{sec:org33d1d24}
 
 Remova aleatóriamente 2 vinhedos.
 
@@ -51,7 +51,7 @@ Os tile de previsão do tempo dirão quais condições climáticas serão enfren
 No primeiro ano o tile 0 é utilizado onde o clima não terá impacto e os magnatas não se importam com as startups do vinho.
 
 \subsection{Início do ano}
-\label{sec:org5079062}
+\label{sec:orgf76d2b9}
 
 Descarte o tile de previsão do tempo (obviamente não no ano 1) e coloque o marcador de impostos (marcador do turno) no espaço inicial.
 
@@ -74,10 +74,10 @@ Quando um jogador realiza a ação de passar/coletiva de imprensa, ele seleciona
 Após a realização da segunda ação no ano o marcador passa para a fase de manutenção.
 
 \subsection{Ações}
-\label{sec:org64824cc}
+\label{sec:org0a0bfe9}
 
 \subsubsection{1) Vinhedos: Compre quantos quiser, mas apenas 1 por região.}
-\label{sec:orgcc63c49}
+\label{sec:orgcd697e6}
 
 \begin{itemize}
 \item Pegue o vinhedo do topo da pilha da região desejada.
@@ -92,7 +92,7 @@ Caso seja o primeiro vinhedo na sua fazenda, coloque seu disco na região do map
 \end{itemize}
 
 \subsubsection{2) Vinícolas: Construa 1 ou 2 vinícolas}
-\label{sec:org1043e3e}
+\label{sec:orgd84a30c}
 
 Para cada vinícola construída o jogador deve:
 
@@ -109,7 +109,7 @@ Se possível adicione um cubo de notoriedade à região selecionda (caso exista 
 para colocar esse cubo na respectiva região.
 
 \subsubsection{3) Enólogos: Contrate 1 ou 2 Enólogos.}
-\label{sec:org619992b}
+\label{sec:orgb9a1137}
 
 Enólogos trabalham em vinícolas, adicionam 2 à qualidade do vinho produzido. Podem mover-se entre fazendas antes da produção.
 
@@ -169,7 +169,7 @@ Lembrete: Cada vinhedo pode comportar apenas 1 fazendeiro e cada vinícula apena
 \end{itemize}
 
 \subsubsection{4) Adegas: Construa 1 adega}
-\label{sec:org7758402}
+\label{sec:org2b7a757}
 
 Ajudam que o vinho envelheça mais, aumentando seu valor. Quanto mais velho o vinho, mais valioso se torna.
 
@@ -183,7 +183,7 @@ Ajudam que o vinho envelheça mais, aumentando seu valor. Quanto mais velho o vi
 Caso não exista um vinhedo na fazenda onde a adega foi colocada, deixe o cubo de notoriedade sobre a mesma, até que um vinhedo seja adquirido e colocado nessa fazenda.
 
 \subsubsection{5) Vendas (mercado interno): Venda quantos vinhos quiser.}
-\label{sec:org600b082}
+\label{sec:orgfd29478}
 
 Para cada vinho vendido:
 
@@ -212,7 +212,7 @@ Durante seu turno, antes de realizar sua ação, é possível recuperar \textbf{
 Para cada par recuperado coloque 2 cubos de notoriedade em regiões diferentes do mapa a sua escolha, 1 em cada.
 
 \subsubsection{6) Exportação: Exporte quantos vinhos quiser}
-\label{sec:org4b51afe}
+\label{sec:org581dcc7}
 
 A exportação provê pontos imediatos e pontuação de final de jogo.
 
@@ -230,7 +230,7 @@ No jogo com 2 jogadores apenas os slots da área demarcada interna são válidos
 \end{quote}
 
 \subsubsection{7) Banco}
-\label{sec:orgb238a9a}
+\label{sec:org1247335}
 
 \begin{itemize}
 \item Retirar seus bagos do banco: Mova seu marcador para trás o número de espaços relativo ao valor do saque e pegue este montante em bagos.
@@ -249,7 +249,7 @@ O valor máximo que o banco suporta são 24 bagos na conta do jogador.
 \end{itemize}
 
 \subsubsection{8) Especialistas (Sommelier)}
-\label{sec:orga838b13}
+\label{sec:org68a2704}
 
 Cada especialista pode ajudá-lo em determinada característica na feira do vinho.
 
@@ -258,7 +258,7 @@ Além disto cada um possui uma habilidade bônus que pode ser usada imediatament
 Após passada a próxima feira vire o especialista de volta para o lado da frente, a habilidade pode ser usada novamente, ou o especialista poderá participar da feira seguinte.
 
 \subsubsection{9) Passar/Coletiva de imprensa}
-\label{sec:orgfc8d441}
+\label{sec:orgb7bcd0b}
 
 \begin{itemize}
 \item Passe e não faça nada
@@ -302,7 +302,7 @@ Carolina: seu interesse é pela região de onde o vinho é proveniente.
 Tendo barris em um magnata lhe permite fazer ações bônus desse magnata ao custo de um vinho qualquer.
 
 \subsection{Manutenção}
-\label{sec:org37f1100}
+\label{sec:orgdd824b7}
 
 \begin{itemize}
 \item Receba ou pague juros de acordo com seu investimento no banco (movimentação da conta).
@@ -320,7 +320,7 @@ Todos estas movimentações são feitas no banco. Bagos não são utilizados nes
 \end{quote}
 
 \subsection{Produção}
-\label{sec:orgfc0b4af}
+\label{sec:org57bf658}
 
 \begin{itemize}
 \item Envelheça o vinho.
@@ -331,7 +331,7 @@ Todos estas movimentações são feitas no banco. Bagos não são utilizados nes
 Se a qualidade, levando em consideração os modificadores como às condições climáticas for maior que 0 (zero) pegue um tile do estoque e armazene em seu depósito ou adega.
 
 \subsection{Feira do vinho}
-\label{sec:org2c29f00}
+\label{sec:orgace1d09}
 
 Nos anos 3, 5 e 6 temos a feira do vinho.
 
@@ -392,7 +392,7 @@ Final de feira:
 \end{itemize}
 
 \subsection{Final do jogo e pontuação}
-\label{sec:orga5219fa}
+\label{sec:orgafdd99d}
 
 Depois da terceira feira do vinho começando com o jogador inicial (último colocado na feira), cada jogador usa o benefício de um magnata, descartando 1 vinho e movendo seu barril.
 Continue até que todos os jogadores terminem suas possibilidades.
