--- a/pax-renaissance/README.tex
+++ b/pax-renaissance/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-08 Thu 21:51
+% Created 2021-04-08 Thu 22:26
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,13 +29,13 @@
 \tableofcontents
 
 \section{PAX RENAISSANCE (2 jogadores)}
-\label{sec:org24e78f4}
+\label{sec:org5df7bc0}
 
 \subsection{AÇÕES (2 por turno)}
-\label{sec:orgc6ae9c8}
+\label{sec:orgc25efa2}
 
 \subsubsection{COMPRAR UMA CARTA}
-\label{sec:org35edcfd}
+\label{sec:orgd9779e8}
 
 Coloque uma carta do mercado em sua mão. Adicione 1 Florin para cada carta na mesma linha à esquerda da carta que estiver comprando (ou na outra linha, caso alguma carta esteja faltando).
 Pegue qualquer quantidade de Florins que estiverem por ventura na carta que foi comprada.
@@ -47,7 +47,7 @@ Pegue qualquer quantidade de Florins que estiverem por ventura na carta que foi 
 \end{itemize}
 
 \subsubsection{JOGANDO UMA CARTA DA MÃO E COLOCANDO AGENTES}
-\label{sec:orgd4f3d71}
+\label{sec:org87a761c}
 
 Baixe uma carta da sua mão em seu Tableau, de acordo com a orientação da carta (leste ou oeste).
 
@@ -64,17 +64,17 @@ Exceção: No caso de o \emph{one-shot} ser uma guerra, civil ou religiosa, deve
 \end{itemize}
 
 \subsubsection{VENDER UMA CARTA}
-\label{sec:orge9d6fdf}
+\label{sec:org1ff5166}
 
-Discarte uma carta de sua mão ou de seu tableu e ganhe 2 Florins.
+Descarte uma carta de sua mão ou de seu Tableau e ganhe 2 Florins.
 
 \subsubsection{EXECUTAR OPERAÇÕES (LESTE/OESTE)}
-\label{sec:org8477ed9}
+\label{sec:org065e4a9}
 
-No máximo uma vez por turno é possível executar uma operação em cada carta de seu tableu em determinado sentido (leste/oeste), em qualquer ordem que desejar.
+No máximo uma vez por turno é possível executar uma operação em cada carta de seu Tableau em determinado sentido (leste/oeste), em qualquer ordem que desejar.
 
 \subsubsection{PERCORRA A ROTA COMERCIAL (LESTE/OESTE)}
-\label{sec:org2f82827}
+\label{sec:orge32c7d5}
 
 No máximo uma vez por turno é possível percorrer uma das rotas comerciais a sua escolha. Adicione 1 Florin (2 jogadores) do Banco (China) à carta virada para baixo no ínicio do mercado escolhido.
 
@@ -103,7 +103,7 @@ Todos os mercadores ao longo da rota recebem 1 Florin cada até que o lucro term
 \end{itemize}
 
 \subsubsection{AÇÃO DE VITÓRIA}
-\label{sec:org4c958e3}
+\label{sec:org1284833}
 
 Use esta ação para declarar vitória, baseada em uma das cartas de vitória \textbf{ATIVAS}.
 
@@ -126,10 +126,10 @@ Em caso de empate a vitória vai para àquele com mais Florins.
 
 
 \subsection{GLOSSÁRIO}
-\label{sec:org3687a63}
+\label{sec:orgd66b3f6}
 
 \subsubsection{BATALHA}
-\label{sec:org60d2c09}
+\label{sec:org7a7a144}
 
 Para resolver uma Campanha, Guerra Civil ou Guerra Religiosa, cada token atacante mata umm token defensor, mas é também morto em troca. O jogador atacante escolhe as baixas.
 
@@ -140,7 +140,7 @@ Os tokes atacantes são vitoriosos caso tenham ao menos um sobrevivente.
 \end{itemize}
 
 \subsubsection{MUDANÇA DE REGIME}
-\label{sec:orgac4aa41}
+\label{sec:orgc7e888a}
 
 A mudança ocorre em um Império durante uma Coroação, ou se ocorrer uma bem sucedida Votação, Campanha, Guerra Civil ou Religiosa contra aquele Império. Se o Império ainda estiver na pilha (fora de algum Tableau)
 ou no Tableau do oponente, mova a carta para o seu Tableau virada para o lado do Rei. Descarte qualquer rainha e/ou Império Vassalo, mas mantenha os tokens.
@@ -159,17 +159,15 @@ e
 \item O jogador pode \textbf{Emancipar} quaisquer Tokens reprimidos nesse Império, ou seja o token poderá ser movido da carta de Império para a carta de mapa correspondente;
 \end{itemize}
 
-\begin{center}
-\begin{tabular}{llllll}
-\textbf{MUDANÇA DE REGIME} & \textbf{Coroação} & \textbf{Voto} & \textbf{Campanha} & \textbf{Guerra Civil} & \textbf{Guerra Religiosa}\\
-\textbf{Império fora de um Tableau} & Pegue o Império pra o seu Tableau (casamento com a Rainha) & - & Capture como Vassalo & Pegue o Império para o seu Tableau & Pegue o Império para o seu Tableau\\
-\textbf{Império no tableu do oponente} & - & Pegue o Império pra o seu Tableau & Capture como Vassalo & Pegue o Império para o seu Tableau & Pegue o Império para o seu Tableau\\
-\textbf{Império no seu próprio Tableau} & - & Vire para o lado República & Capture como Vassalo & Vire para o lado República (Strawman) & Vire para o lado República\\
-\end{tabular}
-\end{center}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.9\linewidth]{./regime-change.png}
+\caption{\label{fig:org993b0e0}
+Esta tabela demonstra os efeitos nas mudanças de regime.}
+\end{figure}
 
 \subsubsection{REPRESSÃO (REPRIMIR)}
-\label{sec:orgedd7e70}
+\label{sec:org5a57727}
 
 Remova o Token (não Pirata) do mapa, que é morto, caso o Império não esteja em um Tableau, ou torna-se um token Reprimido na carta do respectivo Império.
 
@@ -183,10 +181,10 @@ Remova o Token (não Pirata) do mapa, que é morto, caso o Império não esteja 
 
 
 \subsection{\emph{ONE-SHOT} (ÍCONE DA BOMBA)}
-\label{sec:orge50789b}
+\label{sec:org875cd75}
 
 \subsubsection{GUERRAS CIVIS}
-\label{sec:orgf1e7655}
+\label{sec:org7da11ed}
 
 Existem dois tipos de Guerra Civil: Conspirações e Revolta dos Camponeses (\emph{Peasant Revolt}). Em caso de vitória causam uma Mudança de Regime.
 
@@ -206,7 +204,7 @@ Existem dois tipos de Guerra Civil: Conspirações e Revolta dos Camponeses (\em
 
 
 \subsubsection{COROAÇÃO}
-\label{sec:org551e211}
+\label{sec:org44abf1f}
 
 Case a rainha com o Rei de um Império listado no ícone de coroação (pretendentes da rainha), que ainda poderão estar na pilha de Impérios (fora de um Tableau).
 
@@ -219,7 +217,7 @@ A coroação é considerada uma Mudança de Regime.
 \end{itemize}
 
 \subsubsection{GUERRAS RELIGIOSAS}
-\label{sec:orgf1b23e1}
+\label{sec:org9a636ec}
 
 Caso jogue uma \textbf{Crusada}, \textbf{Reforma (\emph{Reformation})} ou \textbf{Jihad}, poderá ser iniciada uma Guerra Religiosa naquela localidade.
 
@@ -238,7 +236,7 @@ Uma Guerra Religiosa não pode ser conduzida onde não existam Hereges (inclusiv
 
 
 \subsubsection{MUDANÇA DE ROTA COMERCIAL}
-\label{sec:org8d80dfe}
+\label{sec:org44b7f92}
 
 Mova o token de bloqueio da rota (caso exista) cobrindo o respectivo Empório (início da rota) para cobrir e desativar um Empório descoberto da mesma cor.
 
@@ -249,10 +247,10 @@ Essa desativação Reprime qualquer token que possa estar nesse local.
 \end{itemize}
 
 \subsection{OPERAÇÕES}
-\label{sec:org86292a6}
+\label{sec:org62a165e}
 
 \subsubsection{DECAPITAR (\emph{BEHEAD})}
-\label{sec:orgafec22d}
+\label{sec:orgdac29ac}
 
 Descarte uma carta de qualquer Tableau que compartilhe a localização da carta ativa. Todavia uma carta não pode Decapitar a si mesma.
 
@@ -263,7 +261,7 @@ Descarte uma carta de qualquer Tableau que compartilhe a localização da carta 
 \end{itemize}
 
 \subsubsection{CAMPANHA}
-\label{sec:org2dffccc}
+\label{sec:org4f36463}
 
 Crie uma batalha em uma carta de Mapa adjacente a localização do Império (inclui diagonais).
 
@@ -282,12 +280,12 @@ Se a Campanha obtiver sucesso o Império sofre uma Mudança de Regime e é reivi
 \end{itemize}
 
 \subsubsection{COMÉRCIO}
-\label{sec:org5503438}
+\label{sec:orge8668d0}
 
 Pegue um Florin de qualquer carta do mercado especificado.
 
 \subsubsection{CORSÁRIO}
-\label{sec:org74ba9e0}
+\label{sec:org6a47418}
 
 Mova 1 Pirata da cor especificada para uma fronteira da localização da carta para outra fronteira na mesma localização.
 
@@ -298,7 +296,7 @@ Mova 1 Pirata da cor especificada para uma fronteira da localização da carta p
 \end{itemize}
 
 \subsubsection{INQUISIDOR}
-\label{sec:orgea319f1}
+\label{sec:org9677dee}
 
 Mova um Bispo da cor especificada de uma carta de um Tableau para uma carta adjacente no mesmo Tableau, ou em uma carta em qualquer Tableau que compartilhe a mesma localização de onde o Bispo está.
 
@@ -313,7 +311,7 @@ Mova um Bispo da cor especificada de uma carta de um Tableau para uma carta adja
 \end{itemize}
 
 \subsubsection{REPRIMIR}
-\label{sec:org5f807bd}
+\label{sec:orgca11745}
 
 Remova do Mapa um token de determinado tipo na localidade especificada e coloque esse token como um token Reprimido na carta correspondente de Império em jogo.
 
@@ -322,18 +320,18 @@ Remova do Mapa um token de determinado tipo na localidade especificada e coloque
 \end{itemize}
 
 \subsubsection{CERCO (\emph{SIEGE})}
-\label{sec:org8719d39}
+\label{sec:orgea7900d}
 
 Mate uma Torre, Cavaleiro ou Pirata na localidade especificada.
 
 \subsubsection{IMPOSTO (\emph{TAX})}
-\label{sec:org2ea9e9e}
+\label{sec:orgc2e0fef}
 
 Mire um mercador na fronteira da localidade especificada. O jogador correspondente deve ou pagar 1 Florin ao Banco (China) ou Reprimir o mercador, então ele deve recrutar (\emph{place a Levy}) no Império taxado
 (não é possível utilizar essa opção caso o Império esteja saturado).
 
 \subsubsection{VOTO}
-\label{sec:orge395d2c}
+\label{sec:org23c737f}
 
 Causa uma mudança de Regime em um Império. O Império deve estar em um Tableau mas não como Vassalo e do lado especificado (leste/oeste).
 
