--- a/pax-renaissance/aid-ops.org
+++ b/pax-renaissance/aid-ops.org
@@ -2,7 +2,7 @@
 [[./op-religious.png]] [[./op-econ.png]] [[./op-political.png]] [[./op-military.png]]
 
 | [[./pax-ren-behead-op.png]]   | Descarte uma carta de qualquer tableau com a mesma localização/região da carta ativa                                                                                                      | Uma carta não decapita a si mesma                                             |
-|                           |                                                                                                                                                                                           | Se descartar um império, descarte a prórpia carta junto                       |
+|                           |                                                                                                                                                                                           | Se descartar um império, descarte a própria carta junto                       |
 | [[./pax-ren-campain-op.png]]  | Batalha em uma carta adjacente ao Império onde a campanha foi selecionada                                                                                                                 | Inclui diagonais                                                              |
 |                           | *Atacantes*: Todos os cavaleiros na localização do Império (Mapa)                                                                                                                         | Pague 1 Florin para cada Cavaleiro atacante; Vitória ocorre mudança de regime |
 |                           | *Defensores*: Cavaleiros e Torres na localização atacada (carta de Mapa adjacente)                                                                                                        | Não move peças no mapa                                                        |
@@ -16,5 +16,5 @@
 | [[./pax-ren-repress-op.png]]  | Retire do mapa uma peça da localidade especificada e a coloque como reprimida no Império correspondente                                                                                   | Se o Império não estiver em jogo, mate a peça e ganhe 1 Florin                |
 | [[./pax-ren-siege-op.png]]    | Mate uma Torre, Cavaleiro ou Pirata na localidade especificada                                                                                                                            |                                                                               |
 | [[./pax-ren-tax-op.png]]      | Mire um mercador na fronteira da localidade especificada. O jogador correspondente deve pagar 1 Florin ao Banco (China) ou Reprimir o mercador e adicionar um /Levy/ na localidade taxada | Não pode realizar essa operação caso esteja saturado                          |
-| [[./pax-ren-vote-op.png]]     | Vire a carta do Império na localidade correspondente para o lado Repúbica, este Império não pode ser Vassalo                                                                              | Pague 1 Florin por peça reprimida no Império                                  |
+| [[./pax-ren-vote-op.png]]     | Vire a carta do Império na localidade correspondente para o lado República, este Império não pode ser Vassalo                                                                             | Pague 1 Florin por peça reprimida no Império                                  |
 |                           |                                                                                                                                                                                           | O jogador deve possuir mais mercadores na fronteira que qualquer outro        |
