--- a/star-wars-rebellion/README.tex
+++ b/star-wars-rebellion/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-20 Tue 10:45
+% Created 2021-04-20 Tue 10:58
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -14,6 +14,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
+\usepackage[margin=0.5in]{geometry}
 \author{Fabio Favero Henkes}
 \date{\today}
 \title{}
@@ -28,16 +29,17 @@
 
 \tableofcontents
 
+
 \section{Star Wars Rebellion}
-\label{sec:org581f4e6}
+\label{sec:orgd4c4269}
 
 \subsection{Fase de Atribuição}
-\label{sec:orgca3ad51}
+\label{sec:org3030b15}
 
 Atribuir líderes à missões.
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{./lider.png}
+\includegraphics[width=2.0in]{./lider.png}
 \end{center}
 
 O jogador Rebelde começa atribuindo seus líderes a missões. Quando terminar, o jogador Imperial atribui seus líderes a missões.
@@ -45,11 +47,11 @@ O jogador Rebelde começa atribuindo seus líderes a missões. Quando terminar, 
 Cada missão possui um requisito de habilidade no canto superior esquerdo.
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{./skills.png}
+\includegraphics[width=2.0in]{./skills.png}
 \end{center}
 
 \subsection{Fase de Comando}
-\label{sec:org8d0b092}
+\label{sec:org284ca3c}
 
 \begin{itemize}
 \item \textbf{Ativar um Sistema}:
@@ -66,7 +68,7 @@ Unidades terrestres e TIE fighters precisam ser transportados (verifique a capac
 Use um líder em uma carta de missão para revelar o efeito da carta.
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{./lider-effect.png}
+\includegraphics[width=2.0in]{./lider-effect.png}
 \end{center}
 
 O termo \textbf{RESOLVA} significa que o efeito da carta acontece automaticamente e não pode ser contraposto.
@@ -82,7 +84,7 @@ Os jogadores rolam dados (de qualquer cor) igual a soma dos ícones de habilidad
 Os dados são rolados somente para ícones correspondentes ao requisito de habilidade da missão.
 
 \subsection{Fase de Restauração}
-\label{sec:orgdec8a84}
+\label{sec:orgd57f995}
 
 \begin{itemize}
 \item \textbf{Retornar líderes}:
@@ -115,7 +117,7 @@ O jogador Rebelde compra uma carta de objetivo.
 Avance o marcador de tempo um espaço no indicador.
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{./time-marker.png}
+\includegraphics[width=2.0in]{./time-marker.png}
 \end{center}
 
 \begin{itemize}
@@ -131,7 +133,7 @@ O jogador posiciona essas unidades em sistemas onde possui marcadores de lealdad
 Cada jogador pode destacar no máximo duas unidades em cada sistema.
 
 \subsection{Vencendo o jogo}
-\label{sec:orgc46e00f}
+\label{sec:org92ca5d7}
 
 O jogador Imperial vence se encontrar e destruir a base rebelde.
 
@@ -142,6 +144,6 @@ O marcador de reputação (com o ícone dos Rebeldes) sobe quando um objetivo é
 O jogador Rebelde pode jogar a carta de objetivo de sua mão se a tiver completado o requisito da carta no momento especificado.
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{./death-star.png}
+\includegraphics[width=2.0in]{./death-star.png}
 \end{center}
 \end{document}
