--- a/star-wars-rebellion/README.tex
+++ b/star-wars-rebellion/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-20 Tue 10:58
+% Created 2021-04-20 Tue 13:36
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -31,10 +31,10 @@
 
 
 \section{Star Wars Rebellion}
-\label{sec:orgd4c4269}
+\label{sec:org12d429a}
 
 \subsection{Fase de Atribuição}
-\label{sec:org3030b15}
+\label{sec:orgcca3c0c}
 
 Atribuir líderes à missões.
 
@@ -51,7 +51,7 @@ Cada missão possui um requisito de habilidade no canto superior esquerdo.
 \end{center}
 
 \subsection{Fase de Comando}
-\label{sec:org284ca3c}
+\label{sec:orgb0a1e2b}
 
 \begin{itemize}
 \item \textbf{Ativar um Sistema}:
@@ -84,7 +84,7 @@ Os jogadores rolam dados (de qualquer cor) igual a soma dos ícones de habilidad
 Os dados são rolados somente para ícones correspondentes ao requisito de habilidade da missão.
 
 \subsection{Fase de Restauração}
-\label{sec:orgd57f995}
+\label{sec:orgf2d30bf}
 
 \begin{itemize}
 \item \textbf{Retornar líderes}:
@@ -133,17 +133,21 @@ O jogador posiciona essas unidades em sistemas onde possui marcadores de lealdad
 Cada jogador pode destacar no máximo duas unidades em cada sistema.
 
 \subsection{Vencendo o jogo}
-\label{sec:org92ca5d7}
+\label{sec:org797c10e}
 
-O jogador Imperial vence se encontrar e destruir a base rebelde.
+O jogador Imperial vence se encontrar e destruir a base rebelde. Se o jogador Imperial possuir lealdade ou unidades terrestres no mesmo sistema da base Rebelde, a base Rebelde é revelada imediatamente.
 
 O jogador Rebelde vence se o marcador de turno encontrar o marcador de reputação.
 
-O marcador de reputação (com o ícone dos Rebeldes) sobe quando um objetivo é cumprido.
+O marcador de reputação (com o ícone dos Rebeldes) sobe o valor determinado na carta de objetivo quando este objetivo é cumprido.
 
 O jogador Rebelde pode jogar a carta de objetivo de sua mão se a tiver completado o requisito da carta no momento especificado.
 
+\begin{itemize}
+\item \textbf{Regras adicionais:}
+\end{itemize}
+
 \begin{center}
-\includegraphics[width=2.0in]{./death-star.png}
+\includegraphics[width=4.0in]{./details.png}
 \end{center}
 \end{document}
